[pending work] pos_tax

--- a/pos_tax/view/view.xml
+++ b/pos_tax/view/view.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- ********************************************************************** -->
-<!-- See __openerp__.py file for Copyright and Licence Informations.         -->
-<!-- ********************************************************************** -->
 <openerp>
     <data>
 
-<!-- View : pos.order.line -->
-        <record id="view_pos_pos_form_tax" model="ir.ui.view">
-            <field name="name">pos.order.tax</field>
+<!-- Model : pos.order -->
+        <record id="view_pos_order_form" model="ir.ui.view">
             <field name="model">pos.order</field>
             <field name="inherit_id" ref="point_of_sale.view_pos_pos_form"/>
             <field name="arch" type="xml">
-                <field name="price_subtotal_incl" position="after">
-                    <field name="pol_tax_rel_id" groups="base.group_no_one"/>
+                <field name="product_id" position="attributes">
+                    <attribute name="on_change">
+                        onchange_product_id(parent.pricelist_id, product_id, qty, parent.partner_id, parent.session_id., context)
+                    </attribute>
+                </field>
+                <field name="qty" position="after">
+
+                    <field name="tax_ids" widget="many2many_tags"/>
+
                 </field>
             </field>
         </record>
+
     </data>
 </openerp>
