[ADD] integrated_trade for stock and purchase-sale

--- a/integrated_trade_product/view/view.xml
+++ b/integrated_trade_product/view/view.xml
@@ -25,7 +25,7 @@
             <field name="model">product.integrated.trade.catalog</field>
             <field name="arch" type="xml">
                 <tree string="Integrated Trade - Products Catalog" editable="top">
-                    <field name="product_id"/>
+                    <field name="product_tmpl_id"/>
                     <field name="supplier_product_default_code"/>
                     <field name="supplier_product_name"/>
                     <field name="supplier_partner_name"/>
@@ -41,9 +41,7 @@
             <field name="arch" type="xml">
                 <search string="Integrated Trade - Products Catalog">
                    <field name="supplier_product_name" string="Supplier Product" filter_domain="['|',('supplier_product_name','ilike',self),('supplier_product_default_code','ilike',self)]"/>
-
                     <group expand="0" string="Group by...">
-                    
                         <filter string="Partner" domain="[]" context="{'group_by' : 'supplier_partner_id'}"/>
                     </group>
                 </search>
