[ADD] 'integrated_trade_product' new test and link feature

--- a/integrated_trade_product/view/action.xml
+++ b/integrated_trade_product/view/action.xml
@@ -25,7 +25,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">product.integrated.trade.catalog</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,form</field>
         </record>
 
     </data>
