--- a/integrated_trade_product/view/view.xml
+++ b/integrated_trade_product/view/view.xml
@@ -26,6 +26,7 @@
             <field name="arch" type="xml">
                 <tree string="Integrated Trade - Products Catalog">
                     <field name="product_tmpl_id" readonly="1"/>
+                    <field name="customer_purchase_price" readonly="1"/>
                     <field name="supplier_product_default_code"/>
                     <field name="supplier_product_name"/>
                     <field name="supplier_partner_name"/>
