[IMP] add image in partner prepare; [FIX] return res in a write function; [REF] add some comment in functions header;

--- a/integrated_trade_base/view/view.xml
+++ b/integrated_trade_base/view/view.xml
@@ -54,9 +54,8 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
-                <field name="is_company" position="before">
-                    <field name="integrated_trade" class="oe_inline"/>
-                    <label for="integrated_trade" string="Integrated Trade?"/>
+                <field name="customer" position="before">
+                    <field name="integrated_trade"/>
                 </field>
             </field>
         </record>
