--- a/integrated_trade_product/view/view.xml
+++ b/integrated_trade_product/view/view.xml
@@ -25,7 +25,7 @@
             <field name="model">product.integrated.trade.catalog</field>
             <field name="arch" type="xml">
                 <tree string="Integrated Trade - Products Catalog" editable="bottom">
-                    <field name="product_tmpl_id" readonly="1"/>
+                    <field name="product_tmpl_id"/>
                     <field name="customer_purchase_price" readonly="1"/>
                     <field name="supplier_product_default_code"/>
                     <field name="supplier_product_name"/>
