--- a/integrated_trade_product/view/view.xml
+++ b/integrated_trade_product/view/view.xml
@@ -24,7 +24,7 @@
         <record id="view_product_integrated_trade_catalog_tree" model="ir.ui.view">
             <field name="model">product.integrated.trade.catalog</field>
             <field name="arch" type="xml">
-                <tree string="Integrated Trade - Products Catalog" editable="bottom">
+                <tree string="Integrated Trade - Products Catalog">
                     <field name="product_tmpl_id"/>
                     <field name="customer_purchase_price" readonly="1"/>
                     <field name="supplier_product_default_code"/>
