[FONCTIONAL] integrated_trade

--- a/integrated_trade_base/view/menu.xml
+++ b/integrated_trade_base/view/menu.xml
@@ -20,10 +20,34 @@
 <openerp>
     <data>
 
+<!-- New Root Menu -->
+        <menuitem id="menu_integrated_trade_root"
+            name="Integrated Trade"
+            sequence="21"/>
+
+<!-- Integrated Trade: SubMenu Partners -->
+        <menuitem id="menu_integrated_trade_partner"
+            parent="menu_integrated_trade_root"
+            name="Integrated Partners"
+            sequence="1"/>
+
+<!-- Model: res.partner -->
+        <menuitem id="menu_integrated_trade_partner_customer"
+            parent="menu_integrated_trade_partner"
+            action="action_res_partner_integrated_customer"
+            sequence="1"/>
+
+        <menuitem id="menu_integrated_trade_partner_supplier"
+            parent="menu_integrated_trade_partner"
+            action="action_res_partner_integrated_supplier"
+            sequence="2"/>
+
+<!-- Model: res.integrated.trade -->
         <menuitem id="menu_res_integrated_trade"
             parent="base.menu_res_company_global"
             action="action_res_integrated_trade"
             sequence="25"/>
+
 
     </data>
 </openerp>
