--- a/integrated_trade_product/view/view.xml
+++ b/integrated_trade_product/view/view.xml
@@ -20,19 +20,33 @@
 <openerp>
     <data>
 
+<!-- Model: res.integrated.trade -->
+        <record id="view_res_integrated_trade_form" model="ir.ui.view">
+            <field name="model">res.integrated.trade</field>
+            <field name="inherit_id" ref="integrated_trade_base.view_res_integrated_trade_form" />
+            <field name="arch" type="xml">
+                    <field name="customer_partner_id" position="after">
+                        <field name="pricelist_id"/>
+                    </field>
+            </field>
+        </record>
+
 <!-- Define: product.integrated.trade.catalog -->
         <record id="view_product_integrated_trade_catalog_tree" model="ir.ui.view">
             <field name="model">product.integrated.trade.catalog</field>
             <field name="arch" type="xml">
                 <tree string="Integrated Trade - Products Catalog">
-                    <field name="product_tmpl_id"/>
-                    <field name="customer_purchase_price" readonly="1"/>
+                    <field name="customer_product_tmpl_id"/>
+                    <field name="supplier_sale_price"/>
+                    <field name="supplier_product_uos"/>
                     <field name="supplier_product_default_code"/>
                     <field name="supplier_product_name"/>
                     <field name="supplier_partner_name"/>
-                    <field name="supplier_partner_id" invisible="1"/>
-                    <field name="supplier_product_id" invisible="1"/>
-                    <field name="customer_company_id" invisible="1"/>
+                    <field name="customer_company_id" groups="base.group_multi_company"/>
+                    <button name="link_product_wizard" icon="gtk-add" type="object" string="Link Product Windows"
+                        attrs="{'invisible': [('customer_product_tmpl_id', '!=', False)]}"/>
+                    <button name="unlink_product" icon="gtk-cancel" type="object" string="Unlink Product"
+                        attrs="{'invisible': [('customer_product_tmpl_id', '=', False)]}"/>
                 </tree>
             </field>
         </record>
@@ -49,5 +63,26 @@
             </field>
         </record>
 
+<!-- Define: integrated.trade.wizard.link.product -->
+        <record id="view_integrated_trade_wizard_link_product_form" model="ir.ui.view">
+            <field name="model">integrated.trade.wizard.link.product</field>
+            <field name="arch" type="xml">
+                <form string="Integrated Trade - Link Product">
+                    <group>
+                        <group string="Your Product">
+                            <field name="customer_product_tmpl_id" />
+                        </group>
+                        <group string="Supplier Product">
+                            <field name="supplier_product_code" />
+                            <field name="supplier_product_name" />
+                            <field name="supplier_product_price" />
+                        </group>
+                        <group colspan="4">
+                            <button name="link_product" type="object" string="Link Product"/>
+                        </group>
+                    </group>
+                </form>
+            </field>
+        </record>
     </data>
 </openerp>
