--- a/integrated_trade_base/view/view.xml
+++ b/integrated_trade_base/view/view.xml
@@ -37,11 +37,15 @@
             <field name="model">res.integrated.trade</field>
             <field name="arch" type="xml">
                 <form string="Integrated Trade" version="7.0">
-                    <group col="4">
+                    <group col="4" string="General Information">
                         <field name="name"/>
                         <field name="active"/>
+                    </group>
+                    <group col="4" string="Information in Customer Database">
                         <field name="customer_company_id"/>
                         <field name="supplier_partner_id"/>
+                    </group>
+                    <group col="4" string="Information in Supplier">
                         <field name="supplier_company_id"/>
                         <field name="customer_partner_id"/>
                     </group>
