--- a/grap_change_views/view/product.xml
+++ b/grap_change_views/view/product.xml
@@ -69,9 +69,9 @@
             <field name="priority" eval="20"/>
             <field name="arch" type="xml">
                 <data>
-                    <xpath expr="//group[@name='Weights']/.." position="attributes">
-                        <attribute name="groups">base.group_user</attribute>
-                    </xpath>
+<!--                    <xpath expr="//group[@name='Weights']/.." position="attributes">-->
+<!--                        <attribute name="groups">base.group_user</attribute>-->
+<!--                    </xpath>-->
                     <field name="product_manager" position="attributes">
                         <attribute name="groups">base.group_no_one</attribute>
                     </field>
@@ -120,26 +120,26 @@
 <!--                                                on_change="onchange_barcode_rule_id(barcode_rule_id)"-->
                                         <field name="type"/>
                                         <field name="uom_id" on_change="onchange_uom(uom_id,uom_po_id)" groups="product.group_uom"/>
-                                        <field name="barcode_rule_id"
-                                                domain="[('generate_model', '=', 'product.product')]"
-                                                groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>
-                                            <field name="generate_type" invisible="1" />
-                                            <field name="barcode_base" attrs="{
-                                                'invisible': [('barcode_rule_id', '=', False)],
-                                                'readonly': True}"
-                                                groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>
-                                            <button name="generate_base" type="object" string="Generate Base (Using Sequence)" attrs="{'invisible': ['|',
-                                            ('generate_type', '!=', 'sequence'),
-                                            ('barcode_base', '!=', 0)]}"
-                                            groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>
+<!--                                        <field name="barcode_rule_id"-->
+<!--                                                domain="[('generate_model', '=', 'product.product')]"-->
+<!--                                                groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>-->
+<!--                                            <field name="generate_type" invisible="1" />-->
+<!--                                            <field name="barcode_base" attrs="{-->
+<!--                                                'invisible': [('barcode_rule_id', '=', False)],-->
+<!--                                                'readonly': True}"-->
+<!--                                                groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>-->
+<!--                                            <button name="generate_base" type="object" string="Generate Base (Using Sequence)" attrs="{'invisible': ['|',-->
+<!--                                            ('generate_type', '!=', 'sequence'),-->
+<!--                                            ('barcode_base', '!=', 0)]}"-->
+<!--                                            groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>-->
 
                                         <field name="ean13"
                                             attrs ="{'readonly': [('generate_type', '=', 'sequence')]}" />
-                                        <button name="generate_barcode" type="object" string="Generate Barcode (Using Barcode Rule)"
-                                            attrs="{'invisible': ['|',
-                                                    ('barcode_rule_id', '=', False),
-                                                    ('barcode_base', '=', 0)]}"
-                                            groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>
+<!--                                        <button name="generate_barcode" type="object" string="Generate Barcode (Using Barcode Rule)"-->
+<!--                                            attrs="{'invisible': ['|',-->
+<!--                                                    ('barcode_rule_id', '=', False),-->
+<!--                                                    ('barcode_base', '=', 0)]}"-->
+<!--                                            groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>-->
                                     </group>
                                     <group>
                                         <field name="is_consignment" groups="recurring_consignment.group_consignment_user"/>
@@ -205,10 +205,10 @@
                                         <field name="incoming_qty" string="Incoming quantity"/>
                                         <field name="outgoing_qty" string="Outgoing quantity"/>
                                         <field name="virtual_available"/>
-                                        <separator string="Consumption" colspan="2"/>
-                                        <field name="nb_days"/>
-                                        <field name="total_consumption"/>
-                                        <field name="average_consumption"/>
+<!--                                        <separator string="Consumption" colspan="2"/>-->
+<!--                                        <field name="nb_days"/>-->
+<!--                                        <field name="total_consumption"/>-->
+<!--                                        <field name="average_consumption"/>-->
                                     </group>
                                     <group colspan="4">
                                         <separator string="Sellers" colspan="2"/>
@@ -313,25 +313,25 @@
                             </page>
                             <page string="Extra-Information" groups="base.group_no_one">
                                 <group col="4">
-                                    <field name="variants" />
-                                    <field name="price_margin" />
-                                    <field name="price_extra" />
-                                    <field name="procure_method" />
-                                    <field name="supply_method" />
-                                    <field name="cost_method" />
-                                    <field name="produce_delay" />
-                                    <field name="state" />
-                                    <field name="product_manager" />
-                                    <field name="property_stock_procurement" />
-                                    <field name="property_stock_production" />
-                                    <field name="property_stock_inventory" />
-                                    <field name="weight" />
-                                    <field name="warranty" />
-                                    <field name="sale_delay" />
-                                    <field name="uos_id" />
-                                    <field name="uos_coeff" />
-                                    <field name="mes_type" />
-                                    <field name="valuation" />
+<!--                                    <field name="variants" />-->
+<!--                                    <field name="price_margin" />-->
+<!--                                    <field name="price_extra" />-->
+<!--                                    <field name="procure_method" />-->
+<!--                                    <field name="supply_method" />-->
+<!--                                    <field name="cost_method" />-->
+<!--                                    <field name="produce_delay" />-->
+<!--                                    <field name="state" />-->
+<!--                                    <field name="product_manager" />-->
+<!--                                    <field name="property_stock_procurement" />-->
+<!--                                    <field name="property_stock_production" />-->
+<!--                                    <field name="property_stock_inventory" />-->
+<!--                                    <field name="weight" />-->
+<!--                                    <field name="warranty" />-->
+<!--                                    <field name="sale_delay" />-->
+<!--                                    <field name="uos_id" />-->
+<!--                                    <field name="uos_coeff" />-->
+<!--                                    <field name="mes_type" />-->
+<!--                                    <field name="valuation" />-->
                                     <field name="property_stock_account_input" />
                                     <field name="property_stock_account_output" />
                                     <field name="supplier_taxes_id" widget="many2many_tags"/>
@@ -348,17 +348,17 @@
             </field>
         </record>
 
-        <record id="product.open_view_product_tree1" model="ir.actions.act_window.view">
-            <field name="sequence" eval="1"/>
-        </record>
+<!--        <record id="product.open_view_product_tree1" model="ir.actions.act_window.view">-->
+<!--            <field name="sequence" eval="1"/>-->
+<!--        </record>-->
 
-        <record id="product.open_view_product_kanban1" model="ir.actions.act_window.view">
-            <field name="sequence" eval="2"/>
-        </record>
+<!--        <record id="product.open_view_product_kanban1" model="ir.actions.act_window.view">-->
+<!--            <field name="sequence" eval="2"/>-->
+<!--        </record>-->
 
-        <record id="product.open_view_product_form1" model="ir.actions.act_window.view">
-            <field name="sequence" eval="3"/>
-            <field name="view_id" ref="view_product_product_form"/>
-        </record>
+<!--        <record id="product.open_view_product_form1" model="ir.actions.act_window.view">-->
+<!--            <field name="sequence" eval="3"/>-->
+<!--            <field name="view_id" ref="view_product_product_form"/>-->
+<!--        </record>-->
     </data>
 </openerp>
