--- a/grap_change_views/view/product.xml
+++ b/grap_change_views/view/product.xml
@@ -120,26 +120,25 @@
 <!--                                                on_change="onchange_barcode_rule_id(barcode_rule_id)"-->
                                         <field name="type"/>
                                         <field name="uom_id" on_change="onchange_uom(uom_id,uom_po_id)" groups="product.group_uom"/>
-<!--                                        <field name="barcode_rule_id"-->
-<!--                                                domain="[('generate_model', '=', 'product.product')]"-->
-<!--                                                groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>-->
-<!--                                            <field name="generate_type" invisible="1" />-->
-<!--                                            <field name="barcode_base" attrs="{-->
-<!--                                                'invisible': [('barcode_rule_id', '=', False)],-->
-<!--                                                'readonly': True}"-->
-<!--                                                groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>-->
-<!--                                            <button name="generate_base" type="object" string="Generate Base (Using Sequence)" attrs="{'invisible': ['|',-->
-<!--                                            ('generate_type', '!=', 'sequence'),-->
-<!--                                            ('barcode_base', '!=', 0)]}"-->
-<!--                                            groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>-->
-
+                                        <field name="barcode_rule_id"
+                                                domain="[('generate_model', '=', 'product.product')]"
+                                                groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>
+                                            <field name="generate_type" invisible="1" />
+                                            <field name="barcode_base" attrs="{
+                                                'invisible': [('barcode_rule_id', '=', False)],
+                                                'readonly': True}"
+                                                groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>
+                                            <button name="generate_base" type="object" string="Generate Base (Using Sequence)" attrs="{'invisible': ['|',
+                                            ('generate_type', '!=', 'sequence'),
+                                            ('barcode_base', '!=', 0)]}"
+                                            groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>
                                         <field name="ean13"
                                             attrs ="{'readonly': [('generate_type', '=', 'sequence')]}" />
-<!--                                        <button name="generate_barcode" type="object" string="Generate Barcode (Using Barcode Rule)"-->
-<!--                                            attrs="{'invisible': ['|',-->
-<!--                                                    ('barcode_rule_id', '=', False),-->
-<!--                                                    ('barcode_base', '=', 0)]}"-->
-<!--                                            groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>-->
+                                        <button name="generate_barcode" type="object" string="Generate Barcode (Using Barcode Rule)"
+                                            attrs="{'invisible': ['|',
+                                                    ('barcode_rule_id', '=', False),
+                                                    ('barcode_base', '=', 0)]}"
+                                            groups="barcodes_generator_abstract.generate_barcode" colspan="2"/>
                                     </group>
                                     <group>
                                         <field name="is_consignment" groups="recurring_consignment.group_consignment_user"/>
